attempt 2 - trying to fix mountain image gap -

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ hr {
 }
 
 .mountain {
-  margin-bottom: -0.35rem;
+  margin-bottom: -0.3%;
 }
 
 .top-cloud {
